# DUUF

./: .gitpod.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_UTILITIES  CONTRIBUTING.md  CleanCmake.sh  DEPENDENCIES  DUUF.doxyfile  README.md  main.cpp
.github/workflows/: codacy-coverage-reporter.yml  codecov.yml  codeql-analysis.yml
COMF/: CMakeLists.txt  COMFLogger.cpp  COMFLogger.h
COMF/message/: BaseMessage.cpp  BaseMessage.h  CMakeLists.txt
COMF/message/basic_type/: MessageHeader.cpp  MessageHeader.h
COMF/message/examples/example1/: CMakeLists.txt  receiveMessage.cpp  sendMessage.cpp
COMF/message/tests/: CMakeLists.txt
COMF/message/tests/test_case_0001/: sendMessage.cpp
COMF/serialization/: CMakeLists.txt  Serializable.h  Serialization.cpp  Serialization.h
COMF/serialization/examples/: CMakeLists.txt
COMF/serialization/examples/example1/: CMakeLists.txt  serialize_deserialize.cpp
COMF/serialization/examples/example2/: CMakeLists.txt  serialize_deserialize.cpp
COMF/serialization/examples/example3/: CMakeLists.txt  TestClass.cpp  TestClass.h  serialize_deserialize.cpp
COMF/serialization/tests/: CMakeLists.txt
COMF/serialization/tests/test_case_0001/: serialize_deserialize.cpp
COMF/serialization/tests/test_case_0002/: CMakeLists.txt
COMF/serialization/tests/test_case_0003/: TestClass.cpp  TestClass.h  serialize_deserialize.cpp
COMF/tcp_server_client/: TcpBase.cpp  TcpBase.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
COMF/udp_client_server/: CMakeLists.txt  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
COMF/udp_client_server/tests/test_case_0001/: client.cpp  server.cpp
COMF/udp_client_server/tests/test_case_0002/: client.cpp  server.cpp
COMF/udp_customer/: UdpConnection.cpp  UdpConnection.h  UdpConnectionType.h  UdpCustomer.cpp  UdpCustomer.h
COMF/udp_customer/examples/: CMakeLists.txt
COMF/udp_customer/examples/example1/: application.cpp
COMF/udp_customer/examples/example2/: application_receive.cpp  application_send.cpp
COMF/udp_customer/tests/: CMakeLists.txt
COMF/udp_message_queue/: CMakeLists.txt  UdpMessageQueue.cpp  UdpMessageQueue.h
COMF/udp_sender_receiver/: CMakeLists.txt  UdpBase.cpp  UdpBase.h  UdpReceiver.cpp  UdpReceiver.h  UdpSender.cpp  UdpSender.h  Udpreceiver.cpp
COMF/udp_sender_receiver/examples/: CMakeLists.txt
COMF/udp_sender_receiver/examples/example1/: client.cpp
COMF/udp_sender_receiver/examples/example2/: server.cpp
COMF/udp_sender_receiver/tests/: CMakeLists.txt
COMF/udp_sender_receiver/tests/test_case_0001/: CMakeLists.txt  client.cpp  server.cpp
COMF/udp_sender_receiver/tests/test_case_0002/: CMakeLists.txt  client.cpp  server.cpp
TESTS/: CMakeLists.txt  test_example.cpp  test_main.cpp  test_udp_sender.cpp
TESTS/COMF/: test_message.cpp  test_serialization.cpp  test_tcp_client.cpp  test_tcp_server.cpp  test_udp_customer.cpp  test_udp_receiver.cpp  test_udp_sender.cpp  test_udpmessagequeue.cpp
